bindings/c/SpecUtils_c.h

  
/** An opaque pointer to a SpecUtils::EnergyCalibration object. */
typedef struct SpecUtils_EnergyCal SpecUtils_EnergyCal;
DLLEXPORT uint32_t CALLINGCONVENTION
SpecUtils_EnergyCal_number_deviation_pairs( const SpecUtils_EnergyCal * const instance );
    
DLLEXPORT float CALLINGCONVENTION
SpecUtils_EnergyCal_deviation_energy( const SpecUtils_EnergyCal * const instance,
                                       const uint32_t deviation_pair_index );
DLLEXPORT float CALLINGCONVENTION
SpecUtils_EnergyCal_deviation_offset( const SpecUtils_EnergyCal * const instance,
                                         const uint32_t deviation_pair_index );
    
DLLEXPORT uint32_t CALLINGCONVENTION
SpecUtils_EnergyCal_number_channels( const SpecUtils_EnergyCal * const instance );
/** The channel lower energies array.
   Will have one more entry that the number of channels (the last entry gives last channel upper energy).
*/
DLLEXPORT const float * CALLINGCONVENTION
SpecUtils_EnergyCal_channel_energies( const SpecUtils_EnergyCal * const instance );
    
/** Sets the polynomial coefficients, and non-linear deviation pairs for the energy calibration object.
   
  @param instance The `SpecUtils_EnergyCal` to modify.
  @param num_channels The number of channels this energy calibration is for.
  @param coeffs The array of polynomial energy calibration coefficients.
  @param number_coeffs The number of entries in the `coeffs` array.  Must be at least two coefficients.
  @param dev_pairs An array giving deviation pairs where the entries are energy followed by offset, e.g.,
          for 3 deviations pairs, the entries in this array would be: [energy_0, offset_0, energy_1, offset_1, energy_2, offset_2]
          May be `NULL`.
  @param number_dev_pairs The number of deviation pairs in the `dev_pairs` array; that is the
          `dev_pairs` array must have twice this many entries in it.
  @returns If the energy calibration supplied is valid, and hence the `SpecUtils_EnergyCal` instance updated.
            Will return false if coefficients or deviation pairs are invalid (e.g., not enough coefficients, NaN of Inf coefficients,
            results in non monotonically increasing channel energies, or are otherwise unreasonable).
*/
DLLEXPORT bool CALLINGCONVENTION
SpecUtils_EnergyCal_set_polynomial( SpecUtils_EnergyCal * instance,
                                    const uint32_t num_channels,
                                    const float *coeffs,
                                    const uint32_t number_coeffs,
                                    const float * const dev_pairs,
                                    const uint32_t number_dev_pairs );
/** Sets the full-range fraction coefficients, and non-linear deviation pairs for the energy calibration object.
     
  @param instance The `SpecUtils_EnergyCal` to modify.
  @param num_channels The number of channels this energy calibration is for.
  @param coeffs The array of polynomial energy calibration coefficients.
  @param number_coeffs The number of entries in the `coeffs` array.  Must be at least two coefficients, and
          should be 5 or fewer coefficients.
  @param dev_pairs An array giving deviation pairs where the entries are energy followed by offset, e.g.,
          for 3 deviations pairs, the entries in this array would be: [energy_0, offset_0, energy_1, offset_1, energy_2, offset_2]
          May be `NULL`.
  @param number_dev_pairs The number of deviation pairs in the `dev_pairs` array; that is the
          `dev_pairs` array must have twice this many entries in it.
  @returns If the energy calibration supplied is valid, and hence the `SpecUtils_EnergyCal` instance updated.
            Will return false if coefficients or deviation pairs are invalid (e.g., not enough coefficients, NaN of Inf coefficients,
            results in non monotonically increasing channel energies, or are otherwise unreasonable).
*/
DLLEXPORT bool CALLINGCONVENTION
SpecUtils_EnergyCal_set_full_range_fraction( SpecUtils_EnergyCal * instance,
                                              const uint32_t num_channels,
                                              const float *coeffs,
                                              const uint32_t num_coeffs,
                                              const float * const dev_pairs,
                                              const uint32_t number_dev_pairs );
  /** Sets the lower-channel energies for the energy calibration object.
   
   @param instance The `SpecUtils_EnergyCal` to modify.
   @param num_channels The number of channels this energy calibration is for.
   @param num_energies The number of entries in the energy channel array.  This must be at least
          as large as `num_channels`, but will typically be 1 larger than this to specify the last channels
          upper energy.  If larger than `num_channels + 1`, all subsequent channels will be ignored.
   @param channel_energies The lower energies of each channel.
   
   @returns If the energy calibration supplied is valid, and hence the `SpecUtils_EnergyCal` instance updated.
            Will return false if input energies are invalid, not increasing, or not enough of them for the number of channels.
   */
DLLEXPORT bool CALLINGCONVENTION
SpecUtils_EnergyCal_set_lower_channel_energy( SpecUtils_EnergyCal * instance,
                                              const uint32_t num_channels,
                                              const uint32_t num_energies,
                                              const float * const channel_energies );
/** Returns the fractional channel number a given energy corresponds to.
   
  If energy calibration coefficients are not set, then will return -999.9.
   
  \sa SpecUtils_EnergyCal_valid
*/
DLLEXPORT double CALLINGCONVENTION
SpecUtils_EnergyCal_channel_for_energy( const SpecUtils_EnergyCal * const instance,
                                          const double energy );
/** Returns the energy for a fractional channel.  That is, if channel is an integer, will return the lower energy of channel, and if
   the fractional part of the channel is 0.5, will return the midpoint of the channel.
   
   If energy calibration coefficients are not set, then will return -999.9.
*/
DLLEXPORT double CALLINGCONVENTION
SpecUtils_EnergyCal_energy_for_channel( const SpecUtils_EnergyCal * const instance,
                                           const double channel );
/** Returns the lower energy this energy calibration is valid for.
   
   If energy calibration coefficients are not set, then will return -999.9f.
   
  \sa SpecUtils_EnergyCal_valid
*/
DLLEXPORT float CALLINGCONVENTION
SpecUtils_EnergyCal_lower_energy( const SpecUtils_EnergyCal * const instance );
/** Returns the upper energy (e.g., upper energy of the last channel) this energy calibration is valid for.
     
     If energy calibration coefficients are not set, then will return -999.9f.
     
     \sa SpecUtils_EnergyCal_valid
*/
DLLEXPORT float CALLINGCONVENTION
SpecUtils_EnergyCal_upper_energy( const SpecUtils_EnergyCal * const instance );