bindings/csharp/SpecUtils/NativeMethods.cs


    [DllImport(LibName, CallingConvention = CC)]
    internal static extern uint SpecUtils_EnergyCal_number_deviation_pairs(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern float SpecUtils_EnergyCal_deviation_energy(IntPtr instance, uint index);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern float SpecUtils_EnergyCal_deviation_offset(IntPtr instance, uint index);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern uint SpecUtils_EnergyCal_number_channels(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern IntPtr SpecUtils_EnergyCal_channel_energies(IntPtr instance);

    // ---- EnergyCalibration setters ----

    [DllImport(LibName, CallingConvention = CC)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static extern bool SpecUtils_EnergyCal_set_polynomial(
        IntPtr instance, uint numChannels,
        float[] coeffs, uint numCoeffs,
        float[]? devPairs, uint numDevPairs);

    [DllImport(LibName, CallingConvention = CC)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static extern bool SpecUtils_EnergyCal_set_full_range_fraction(
        IntPtr instance, uint numChannels,
        float[] coeffs, uint numCoeffs,
        float[]? devPairs, uint numDevPairs);

    [DllImport(LibName, CallingConvention = CC)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static extern bool SpecUtils_EnergyCal_set_lower_channel_energy(
        IntPtr instance, uint numChannels,
        uint numEnergies, float[] channelEnergies);

    // ---- EnergyCalibration utilities ----

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern double SpecUtils_EnergyCal_channel_for_energy(IntPtr instance, double energy);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern double SpecUtils_EnergyCal_energy_for_channel(IntPtr instance, double channel);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern float SpecUtils_EnergyCal_lower_energy(IntPtr instance);

    [DllImport(LibName, CallingConvention = CC)]
    internal static extern float SpecUtils_EnergyCal_upper_energy(IntPtr instance);
}
